# WebWeaver

./: .gitignore  Cargo.toml  Install & Command  README.md  Simple Install  Simple Wizard  install.sh
lw-cli/: Cargo.toml
lw-cli/src/: main.rs
lw-core/: Cargo.toml
lw-core/src/: auth.rs  db.rs  deps.rs  differ.rs  entities.rs  graph.rs  graphql.rs  lib.rs  models.rs  normalize.rs  replay.rs  sync.rs
lw-core/src/attack/: idor.rs  mod.rs  race.rs  sequence.rs  severity.rs
lw-core/src/report/: generator.rs  mod.rs  redact.rs
lw-core/src/report/templates/: bugcrowd.md.tera  generic.md.tera  hackerone.md.tera
lw-proxy/: addon.py
