[package]
name    = "lw-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
toml       = "0.8"
regex      = "1"
once_cell  = "1"
sha2       = "0.10"
hex        = "0.4"
url        = "2"
petgraph   = "0.6"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset"] }
tokio      = { version = "1",    features = ["rt-multi-thread", "time"] }
tera       = { version = "1",    default-features = false }
